syntax = "proto3";

option go_package = "./smmp";

message SmmpHeader {
  int32 magic = 1;
  bytes control = 2; //LSB H A C I A D N, should always have length 1
  uint32 payloadLen = 3;
  uint32 blockNum = 4;
  uint32 totalBlocks = 5;
  string uuid = 6;
}

message SmmpMessage {
  SmmpHeader header = 1;
  bytes data = 2;
}

